# ltl2ba

./: .gitignore  CMakeLists.txt  Makefile.am  README  alternating.c  buchi.c  cache.c  configure.ac  generalized.c  lex.c  ltl2ba.h  main.c  mem.c  parse.c  rewrt.c  set.c  trans.c  util.c  util.h
lib/: .gitignore  Makefile.am
m4/: .gitignore  gnulib-cache.m4  gnulib-comp.m4
